<resources>
    <string name="app_name">My Style</string>
    <string name="recent">Recent</string>
    <string name="playlist">Playlist</string>
    <string name="favorite">Favorite</string>
    <string name="search">Search</string>
    <string name="image_poster">Image Poster</string>
    <string name="player">player</string>
    <string name="timer">05:55</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="music">Music</string>
    <string name="give_permission">Give Permission</string>
    <string name="massage_for_permission">This permission is needed to access your device\'s Music to Play. Please grant the permission to continue.</string>
    <string name="exit">Exit App</string>
    <string name="permission">Permission</string>
</resources>